--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 psycopg2 = "^2.9.9"
 requests = "^2.32.3"
+langdetect = "^1.0.9"
+enchant = "^0.0.1"
 
 
 [tool.poetry.group.lint.dependencies]
